css/mha-app.css
body {
  padding: 0;
}

.aspNetHidden {
  padding: 0;
}

textarea {
  font-size: 1em;
}

input {
  margin-bottom: 1px;
}

#SectionHeader {
  height: 40px;
  text-align: center;
  margin: 0 auto;
  padding-bottom: 0;
}

#SectionContent {
  padding-bottom: 0;
}

#floater {
  float: left;
  height: 50%;
  margin-top: -15px;
  padding-bottom: 0;
}

#title {
  clear: both;
  height: 30px;
}

#response {
  overflow-y: auto;
  position: static;
  width: 100%;
  padding-bottom: 0;
  max-height: 70vh;
}

#response table {
  color: var(--text-color);
  border-width: 1px;
  border-color: var(--border-color);
  border-collapse: collapse;
  margin-bottom: 0;
}

#response th {
  border-width: 1px;
  border-style: solid;
  border-color: var(--border-color);
  padding: 8px;
  text-align: center;
  cursor: pointer;
}

#response td {
  border-width: 1px;
  border-style: solid;
  border-color: var(--border-color);
  padding-left: 2px;
  color: var(--text-color);
}

.allowBreak {
  word-break: break-all;
}

.summaryList {
  border-width: 0;
  margin-bottom: 20px;
  width: 100%;
  table-layout: fixed;
}

.summaryList td {
  border-width: 0;
  padding-bottom: 0;
}

.summaryHeader {
  text-align: right;
  font-weight: bold;
  width: 150px;
}

.responsePane {
  margin-left: 1em;
  margin-right: 1em;
  padding-bottom: 0;
}

.oddRow {
  background-color: var(--highlight-color);
}

.tableHeader {
  background-color: var(--button-color);
  color: var(--bg-color);
}

#inputHeaders {
  width: 100%;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}

.sectionHeader {
  background-color: var(--button-color);
  color: var(--bg-color);
  padding-top: 8px;
  padding-bottom: 8px;
  font-weight: bold;
  cursor: pointer;
}

.tableCaption {
  background-color: var(--highlight-color);
  color: var(--text-color);
  padding-top: 8px;
  padding-bottom: 8px;
  font-weight: bold;
  display: block;
  text-align: left;
  cursor: pointer;
}

.collapsibleArrow {
  float: right;
  cursor: pointer;
}

.collapsibleSwitch {
  float: left;
  font-size: xx-large;
  line-height: 8px;
  display: block;
  width: 38px;
  text-align: center;
  padding-left: 8px;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}

.collapsibleWrapper {
  padding-bottom: 0;
  margin-bottom: 1em;
  overflow-x: auto;
  overflow-y: hidden;
  word-wrap: break-word;
}

.hiddenElement {
  display: none;
}

.emptyColumn {
  display: none;
}

.hotBarCell {
  padding: 0;
}

.hotBarContainer {
  padding-bottom: 1px;
}

.hotBarBar {
  height: 8px;
  background-color: #e44d4d; /* A nice red */
  padding-bottom: 0;
  border-radius: 3px;
}

.hotBarLabel {
  padding: 0.4em 1.2em 2px 0;
  white-space: nowrap;
}

.negativeCell {
  color: #e44d4d; /* A nice red */
}

#hop {
  min-width: 3em;
}

#number {
  min-width: 2em;
}

#originalHeadersContainer {
  margin-left: 1em;
}

#originalHeaders {
  white-space: pre-wrap;
  width: 100%;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}

#mhaFooter {
  float: right;
}

.commandBar {
  height: 44px;
  background-color: var(--highlight-color);
  padding: 0;
}

.ms-Button-icon {
  display: inline-block;
}

